dns query to translate hostname to the ip address if getaddrinfo() can be used.

--- a/trace/trace.vcxproj.filters
+++ b/trace/trace.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="address.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="winsock_wrapper.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="bytes.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers.h">
@@ -33,6 +39,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="address.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="user_input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="types.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="winsock_wrapper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bytes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
