--- a/trace/trace.vcxproj
+++ b/trace/trace.vcxproj
@@ -121,6 +121,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -141,13 +142,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="address.c" />
+    <ClCompile Include="bytes.c" />
     <ClCompile Include="icmp_codes.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="winsock_wrapper.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="address.h" />
+    <ClInclude Include="bytes.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="icmp_codes.h" />
+    <ClInclude Include="types.h" />
+    <ClInclude Include="user_input.h" />
+    <ClInclude Include="winsock_wrapper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
