--- a/trace/trace.vcxproj
+++ b/trace/trace.vcxproj
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -145,6 +146,7 @@
     <ClCompile Include="bytes.c" />
     <ClCompile Include="icmp_codes.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="user_input.c" />
     <ClCompile Include="winsock_wrapper.c" />
   </ItemGroup>
   <ItemGroup>
