--- a/trace/trace.vcxproj
+++ b/trace/trace.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="bytes.c" />
     <ClCompile Include="icmp_codes.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="stopwatch.c" />
     <ClCompile Include="user_input.c" />
     <ClCompile Include="winsock_wrapper.c" />
   </ItemGroup>
@@ -154,6 +155,8 @@
     <ClInclude Include="bytes.h" />
     <ClInclude Include="headers.h" />
     <ClInclude Include="icmp_codes.h" />
+    <ClInclude Include="stopwatch.h" />
+    <ClInclude Include="trace.h" />
     <ClInclude Include="types.h" />
     <ClInclude Include="user_input.h" />
     <ClInclude Include="winsock_wrapper.h" />
